log
Wed 10 May 2023 12:59:37 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|4
total_score: 0/70
3447d6f
Wed 10 May 2023 01:03:46 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|4
total_score: 0/70
28908a8
Wed 10 May 2023 01:04:18 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ca667ac
Wed 10 May 2023 01:04:45 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
7ad0878
Wed 10 May 2023 10:56:55 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:27:28: error: subscripted value is neither array nor pointer nor vector
   27 |     pq->heapArray->priority[pq->size]=data;
      |                            ^
Compilation failed
c6b734e
Wed 10 May 2023 10:57:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:27:29: error: invalid type argument of unary ‘*’ (have ‘int’)
   27 |     pq->heapArray->priority[*pq->size]=data;
      |                             ^~~~~~~~~
Compilation failed
f4b6330
